Salesforce CPQ/main/default/objects/QuoteTerm__c/fields/Body__c.field-meta.xml
<CustomField>
    <fullName>Body__c</fullName>
    <description>Body containing text of the term.</description>
    <inlineHelpText>Text content of this term.</inlineHelpText>
    <label>Body</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>