Salesforce CPQ/main/default/objects/QuoteTerm__c/fields/Locked__c.field-meta.xml
<CustomField>
    <fullName>Locked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Controls a Quote Term being editable by a user.</description>
    <inlineHelpText>Controls a Quote Term being editable by a user.</inlineHelpText>
    <label>Locked</label>
    <type>Checkbox</type>
</CustomField>