Salesforce CPQ/main/default/objects/QuoteTerm__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Quote to which this term applies.</description>
    <inlineHelpText>Quote to which this term applies. Left blank if this is a standard term.</inlineHelpText>
    <label>Quote</label>
    <referenceTo>Quote__c</referenceTo>
    <relationshipLabel>Quote Terms</relationshipLabel>
    <relationshipName>QuoteTerms</relationshipName>
    <type>Lookup</type>
</CustomField>