Salesforce CPQ/main/default/objects/QuoteTerm__c/fields/TemplateContent__c.field-meta.xml
<CustomField>
    <fullName>TemplateContent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Template Content to which this term is applied.</description>
    <inlineHelpText>Template Content to which this term is applied.</inlineHelpText>
    <label>Template Content</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>TemplateContent__c.Type__c</field>
            <operation>equals</operation>
            <value>Quote Terms</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>TemplateContent__c</referenceTo>
    <relationshipLabel>Quote Terms</relationshipLabel>
    <relationshipName>Quote_Terms</relationshipName>
    <type>Lookup</type>
</CustomField>