Salesforce CPQ/main/default/objects/QuoteTerm__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Indicates if the term is standard, custom, or modified.</description>
    <formula>IF(AND(ISBLANK(Quote__c),ISBLANK(StandardTerm__c)), $Label.SBQQ__lbl_standard,
  IF(AND(NOT(ISBLANK(Quote__c)),ISBLANK(StandardTerm__c)), $Label.SBQQ__lbl_custom, $Label.SBQQ__lbl_modified))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates if the term is standard, custom, or modified.</inlineHelpText>
    <label>Type</label>
    <type>Text</type>
</CustomField>