Salesforce CPQ/main/default/objects/QuoteTerm__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>PrintOrder__c</columns>
    <columns>Active__c</columns>
    <columns>Status__c</columns>
    <columns>Type__c</columns>
    <columns>Body__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>